--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,10 +7,12 @@ body {
 textarea {
   background: transparent;
   border: none;
-  resize: none;
+  resize: both;
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+  /* height: 100%; */
+  width: 100%;
 }
 
 .jumbotron {
