--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,16 +4,6 @@ body {
   line-height: 1;
 }
 
-textarea {
-  background: transparent;
-  border: none;
-  resize: both;
-  color: #000000;
-  border-left: 1px solid black;
-  padding: 10px;
-  /* height: 100%; */
-  width: 100%;
-}
 
 .jumbotron {
   text-align: center;
@@ -36,6 +26,28 @@ textarea {
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;
+}
+
+/* .row div:nth-child(2) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} */
+/* .wrapper > div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} */
+
+textarea {
+  background: transparent;
+  border: none;
+  resize: none;
+  color: #000000;
+  border-left: 1px solid black;
+  padding: 10px;
+  /* width: 100%;
+  height: 30%; */
 }
 
 .row div:last-child {
