--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body {
   line-height: 1;
 }
 
-
+/* || Header styles */
 .jumbotron {
   text-align: center;
   background-color: transparent;
@@ -17,10 +17,12 @@ body {
   white-space: pre-wrap;
 }
 
+/* || Div element message popup when event is saved */
 #message {
   display: none;
 }
 
+/* || Day planner Row styles */
 .time-block {
   text-align: center;
   border-radius: 15px;
@@ -31,8 +33,7 @@ body {
   height: 80px;
   border-top: 1px solid white;
 }
-
-
+ 
 textarea {
   background: transparent;
   border: none;
@@ -47,32 +48,11 @@ textarea:focus {
   outline: 0;
 }
 
+/* || Save button styles */
 .row div:last-child {
   display: flex;
   justify-content: flex-start;
   padding: 0;
-}
-
-.hour {
-  background-color: #ffffff;
-  color: #000000;
-  border-top: 1px dashed #000000;
-}
-
-.past {
-  background-color: #d3d3d3;
-  color: white;
-}
-
-
-.present {
-  background-color: #faffae;
-  color: white;
-}
-
-.future {
-  background-color: #77dd77;
-  color: white;
 }
 
 .saveBtn {
@@ -95,4 +75,28 @@ textarea:focus {
 .saveBtn:focus {
   outline: 0;
 }
+
+/* || First column of day planner */
+.hour {
+  background-color: #ffffff;
+  color: #000000;
+  border-top: 1px dashed #000000;
+}
+
+/* || Time of day styles */
+.past {
+  background-color: #d3d3d3;
+  color: white;
+}
+
+.present {
+  background-color: #faffae;
+  color: white;
+}
+
+.future {
+  background-color: #77dd77;
+  color: white;
+}
+
 
