--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,11 @@ body {
   border-bottom: 10px solid black;
 }
 
+#currentDay {
+  margin-top: 30px;
+  font-size: 30px;
+}
+
 .description {
   white-space: pre-wrap;
 }
