--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,11 @@
 body {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
+  font-family: 'Dosis', sans-serif;
   line-height: 1;
 }
 
 /* || Header styles */
 .jumbotron {
+  font-family: 'Encode Sans SC', sans-serif;  font-size: 16px;
   text-align: center;
   background-color: transparent;
   color: black;
