--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,7 @@ body {
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;
+  font-weight: bold;
 }
  
 textarea {
@@ -47,6 +48,9 @@ textarea {
   border-left: 1px solid black;
   padding: 10px;
   width: 100%;
+  font-size: 16px;
+  letter-spacing: .12em;
+  line-height: 1.3;
 }
 
 textarea:focus {
