--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,9 +37,17 @@ body {
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;
+}
+
+/* || First column of day planner */
+.hour {
+  background-color: #ffffff;
+  color: #000000;
+  border-top: 1px solid #000000;
   font-weight: bold;
 }
- 
+
+/* || Second column of day planner */
 textarea {
   background: transparent;
   border: none;
@@ -57,7 +65,7 @@ textarea:focus {
   outline: 0;
 }
 
-/* || Save button styles */
+/* || Save button styles -- third column */
 .row div:last-child {
   display: flex;
   justify-content: flex-start;
@@ -85,12 +93,6 @@ textarea:focus {
   outline: 0;
 }
 
-/* || First column of day planner */
-.hour {
-  background-color: #ffffff;
-  color: #000000;
-  border-top: 1px dashed #000000;
-}
 
 /* || Time of day styles */
 .past {
